--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,7 +1,7 @@
 name: Build
 
 # Trigger the workflow on push or pull request
-on: [push, workflow_dispatch]
+on: [push]
 
 jobs:
   windows-release:
